--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <a href="./index.html">
             <img class="logo" src="./img/icons/logo.svg" alt="logo" />
           </a>
-          <button class="dark-mode-btn">
+          <button class="dark-mode-btn" aria-label="Dark Mode">
             <img
               src="./img/icons/sun.svg"
               alt="Light mode"
@@ -85,7 +85,11 @@
               <a href="./contacts.html" class="nav-list__link">Kontakt</a>
             </li>
             <li class="nav-list__item">
-              <div class="dropdown nav-list__link">
+              <div
+                class="dropdown nav-list__link"
+                role="button"
+                aria-haspopup="true"
+              >
                 Rechtliches
                 <div class="dropdown-content">
                   <a href="./impressum.html">Impressum</a>
@@ -94,17 +98,19 @@
               </div>
             </li>
           </ul>
-          <div class="hamburger">
+          <div class="hamburger" role="button" aria-label="Hauptmenü">
             <span class="bar"></span><span class="bar"></span
             ><span class="bar"></span>
           </div>
         </div>
       </div>
     </nav>
+
     <!-- Header -->
     <header class="header">
       <video class="video-bg" autoplay muted loop>
         <source src="./video/bg-video-2.mp4" type="video/mp4" />
+        <img src="./images/fallback-image.jpg" alt="Hintergrundvideo" />
       </video>
       <div class="header__wrapper-headline">
         <div class="header__wrapper-headline__title">
@@ -116,15 +122,21 @@
           <span>frontend<br /><em>developer</em></span
           ><br />
         </div>
-        <a href="/contacts.html" class="button button__main"
-          >Kontaktiere mich</a
+        <a href="/contacts.html"
+          ><button class="button button__main">Kontaktiere mich</button></a
         >
       </div>
       <div class="header__wrapper__skills-img">
-        <img src="./img/card-skills.webp" alt="skills" />
+        <img
+          src="./img/card-skills.webp"
+          alt="Meine Fähigkeiten: Frontend
+        Developer, UI/UX Desigener, Javascript, HTML, CSS, Sass, Bootstrap,
+        BEM"
+        />
       </div>
     </header>
-    <!-- Main-->
+
+    <!-- Main -->
     <main class="section">
       <div class="container">
         <h1 class="title-1">projekte</h1>
@@ -134,7 +146,7 @@
             <a href="./project-page1.html">
               <img
                 src="./img/projects/projekt1.webp"
-                alt="project_img1"
+                alt="Projekt 1: Kurs 'Fortgeschrittenes CSS'"
                 class="project__img"
               />
             </a>
@@ -144,7 +156,7 @@
             <a href="./project-page2.html">
               <img
                 src="./img/projects/projekt2.webp"
-                alt="project_img2"
+                alt="Projekt 2: Landing-Page Tanzschule"
                 class="project__img"
               />
             </a>
@@ -154,7 +166,7 @@
             <a href="./project-page3.html">
               <img
                 src="./img/projects/projekt3.webp"
-                alt="project_img3"
+                alt="Projekt 3: Interaktiver Clickdummy einer Hörspiel-App"
                 class="project__img"
               />
             </a>
@@ -168,40 +180,55 @@
       <div class="container">
         <ul class="social">
           <li class="social__item">
-            <a href="https://t.me/ledo9913" target="_blank">
-              <img src="./img/icons/telegram.svg" alt="telegram" />
+            <a
+              href="https://t.me/ledo9913"
+              target="_blank"
+              aria-label="Telegram"
+            >
+              <img src="./img/icons/telegram.svg" alt="Telegram" />
             </a>
           </li>
           <li class="social__item">
             <a
               href="https://discordapp.com/users/1016065690253406298"
               target="_blank"
+              aria-label="Discord"
             >
-              <img src="./img/icons/discord.svg" alt="discord" />
+              <img src="./img/icons/discord.svg" alt="Discord" />
             </a>
           </li>
           <li class="social__item">
-            <a href="https://dribbble.com/ledo93" target="_blank">
-              <img src="./img/icons/dribbble.svg" alt="dribbble" />
+            <a
+              href="https://dribbble.com/ledo93"
+              target="_blank"
+              aria-label="Dribbble"
+            >
+              <img src="./img/icons/dribbble.svg" alt="Dribbble" />
             </a>
           </li>
           <li class="social__item">
-            <a href="https://github.com/ledo9315" target="_blank">
-              <img src="./img/icons/gitHub.svg" alt="gitHub" />
+            <a
+              href="https://github.com/ledo9315"
+              target="_blank"
+              aria-label="GitHub"
+            >
+              <img src="./img/icons/gitHub.svg" alt="GitHub" />
             </a>
           </li>
           <li class="social__item">
             <a
               href="https://www.linkedin.com/in/leonid-domahalskyy-0a6b95206/?originalSubdomain=de"
               target="_blank"
+              aria-label="LinkedIn"
             >
-              <img src="./img/icons/linkedIn.svg" alt="linkedIn" />
+              <img src="./img/icons/linkedIn.svg" alt="LinkedIn" />
             </a>
           </li>
         </ul>
         <div class="copyright"><p>&copy; Leonid Domahalskyy</p></div>
       </div>
     </footer>
+
     <script src="./js/main.js"></script>
   </body>
 </html>
