--- a/project-page1.html
+++ b/project-page1.html
@@ -68,7 +68,7 @@
           <a href="./index.html">
             <img class="logo" src="./img/icons/logo.svg" alt="logo" />
           </a>
-          <button class="dark-mode-btn">
+          <button class="dark-mode-btn" aria-label="Dark Mode">
             <img
               src="./img/icons/sun.svg"
               alt="Light mode"
@@ -80,22 +80,24 @@
               class="dark-mode-btn__icon"
             />
           </button>
-
           <ul class="nav-list">
             <li class="nav-list__item">
-              <a href="./index.html" class="nav-list__link--active">Projekte</a>
+              <a href="./index.html" class="nav-list__link">Projekte</a>
             </li>
-
             <li class="nav-list__item">
-              <a href="./about_me.html" class="nav-list__link">Über mich</a>
+              <a href="./about_me.html" class="nav-list__link"
+                >&uuml;ber mich</a
+              >
             </li>
-
             <li class="nav-list__item">
               <a href="./contacts.html" class="nav-list__link">Kontakt</a>
             </li>
-
             <li class="nav-list__item">
-              <div class="dropdown nav-list__link">
+              <div
+                class="dropdown nav-list__link"
+                role="button"
+                aria-haspopup="true"
+              >
                 Rechtliches
                 <div class="dropdown-content">
                   <a href="./impressum.html">Impressum</a>
@@ -104,8 +106,7 @@
               </div>
             </li>
           </ul>
-
-          <div class="hamburger">
+          <div class="hamburger" role="button" aria-label="Hauptmenü">
             <span class="bar"></span><span class="bar"></span
             ><span class="bar"></span>
           </div>
@@ -125,22 +126,20 @@
           />
           <div class="project-details__button-wrapper">
             <a
+              class="button button--github"
               href="https://github.com/ledo9315/photography-masterclass"
               target="_blank"
-              class="button button--github"
-            >
-              Github repo <i class="fa-brands fa-github"></i>
-            </a>
+              >Github repo <i class="fa-brands fa-github"></i
+            ></a>
             <a
+              class="button button--link"
               href="https://ledo9315.github.io/photography-masterclass/"
               target="_blank"
-              class="button button--link"
-            >
-              Webseite <i class="fa-solid fa-up-right-from-square"></i>
-            </a>
+              >Webseite <i class="fa-solid fa-up-right-from-square"></i
+            ></a>
           </div>
 
-          <div class="project-details__info-banner">
+          <div class="project-details__info-banner" role="banner">
             <h2 class="project-details__info-banner__headline title-2">
               JavaScript Sass KURS
             </h2>
@@ -233,36 +232,52 @@
       <div class="container">
         <ul class="social">
           <li class="social__item">
-            <a href="https://t.me/ledo9913" target="_blank"
-              ><img src="./img/icons/telegram.svg" alt="telegram"
-            /></a>
+            <a
+              href="https://t.me/ledo9913"
+              target="_blank"
+              aria-label="Telegram"
+            >
+              <img src="./img/icons/telegram.svg" alt="Telegram" />
+            </a>
           </li>
           <li class="social__item">
             <a
               href="https://discordapp.com/users/1016065690253406298"
               target="_blank"
-              ><img src="./img/icons/discord.svg" alt="discord"
-            /></a>
+              aria-label="Discord"
+            >
+              <img src="./img/icons/discord.svg" alt="Discord" />
+            </a>
           </li>
           <li class="social__item">
-            <a href="https://dribbble.com/ledo93" target="_blank"
-              ><img src="./img/icons/dribbble.svg" alt="dribbble"
-            /></a>
+            <a
+              href="https://dribbble.com/ledo93"
+              target="_blank"
+              aria-label="Dribbble"
+            >
+              <img src="./img/icons/dribbble.svg" alt="Dribbble" />
+            </a>
           </li>
           <li class="social__item">
-            <a href="https://github.com/ledo9315" target="_blank"
-              ><img src="./img/icons/gitHub.svg" alt="gitHub"
-            /></a>
+            <a
+              href="https://github.com/ledo9315"
+              target="_blank"
+              aria-label="GitHub"
+            >
+              <img src="./img/icons/gitHub.svg" alt="GitHub" />
+            </a>
           </li>
           <li class="social__item">
             <a
               href="https://www.linkedin.com/in/leonid-domahalskyy-0a6b95206/?originalSubdomain=de"
               target="_blank"
-              ><img src="./img/icons/linkedIn.svg" alt="linkedIn"
-            /></a>
+              aria-label="LinkedIn"
+            >
+              <img src="./img/icons/linkedIn.svg" alt="LinkedIn" />
+            </a>
           </li>
         </ul>
-        <div class="copyright"><p>© Leonid Domahalskyy</p></div>
+        <div class="copyright"><p>&copy; Leonid Domahalskyy</p></div>
       </div>
     </footer>
 
